# knoda-ai-agent

./: .gitignore  ARCHITECTURE_SYSTEM.md  DEPLOY.md  Dockerfile  HACKATHON_SUBMISSION.md  LICENSE  README.md  SYSTEM.md  agent_v1.md  architecture.md  deploy.sh  idea.md
.do/: app.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Makefile  alembic.ini  knoda-ai-ronin.pem  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_app_settings.py  0003_job_source_config.py  0004_token_usage.py  0005_embeddings.py  0006_charts_dashboards.py  0007_multi_tenant.py  0008_v2_memory.py  0009_meeting_presentations.py
backend/src/: config.py
backend/src/agents/: agent.py  analyst.py  communication.py  core.py  discovery.py  state.py  supervisor.py
backend/src/api/: dependencies.py  main.py  rate_limit.py
backend/src/api/routers/: __init__.py  agent.py  catalog.py  charts.py  conversations.py  dashboards.py  datasets.py  jobs.py  meetings.py  present.py  semantic.py  settings.py  sql_lab.py  usage.py
backend/src/embeddings/: __init__.py  service.py
backend/src/meeting/: orchestrator.py  recall_client.py  scheduler.py  screenshare.py
backend/src/models/: __init__.py  connection.py  job.py  profile.py  relationship.py  schema.py  semantic.py
backend/src/query_engine/: __init__.py  engine.py
backend/src/query_engine/adapters/: __init__.py  duckdb_file.py  mysql.py  postgres.py  s3_parquet.py
backend/src/semantic/: __init__.py  serializer.py
backend/src/storage/: __init__.py  database.py  redis_client.py  snapshot_cache.py  source_config_cache.py
backend/src/storage/orm/: __init__.py  charts.py  embedding.py  job.py  long_term.py  meeting.py  profile.py  relationship.py  schema.py  semantic.py  settings.py  token_usage.py
backend/src/storage/repositories/: __init__.py  charts_repo.py  embedding_repo.py  job_repo.py  long_term_repo.py  meeting_repo.py  profile_repo.py  relationship_repo.py  schema_repo.py  semantic_repo.py  settings_repo.py  token_usage_repo.py
backend/src/tools/: __init__.py  data.py  schema.py
docker/: .env.prod.example  Dockerfile.backend  docker-compose.prod.yml  docker-compose.yml  nginx.conf  seed_tpch.py
examples/tpch/: semantic_layer.yaml
frontend/: package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/charts/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboards/: page.tsx
frontend/src/app/databases/: page.tsx
frontend/src/app/meetings/: page.tsx
frontend/src/app/overview/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/sql-lab/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/charts/: ChartRenderer.tsx  DashboardFilterBar.tsx  EChartsBase.tsx  dashboard-filter-context.tsx
frontend/src/components/chat/: activity-stream.tsx  conversation-history.tsx  conversation-turn.tsx  data-artifact.tsx  empty-state.tsx  message-input.tsx  workspace-chat.tsx
frontend/src/components/jobs/: connect-database-dialog.tsx  job-status-badge.tsx
frontend/src/components/layout/: app-shell.tsx  chat-panel.tsx  global-chat-button.tsx  job-tabs.tsx  sidebar.tsx
frontend/src/components/presentation/: VoiceInterface.tsx
frontend/src/components/semantic/: semantic-graph.tsx
frontend/src/components/ui/: checkbox.tsx  switch.tsx
frontend/src/lib/: echarts-theme.ts  llm-settings.ts  theme.ts
frontend/src/lib/api/: catalog.ts  charts.ts  client.ts  conversations.ts  jobs.ts  meetings.ts  semantic.ts  settings.ts
frontend/src/lib/hooks/: use-charts.ts  use-chat-stream.ts  use-job-stream.ts  (+5 more)
frontend/src/types/: api.ts
(+14 files in other folders)
